--- a/HTML/ProvinceManager/LoadProvince.html
+++ b/HTML/ProvinceManager/LoadProvince.html
@@ -34,6 +34,7 @@
 <span class='keyWord'>using</span> LJCDataGridLib;
 <span class='keyWord'>using</span> LJCNetCommon;
 <span class='keyWord'>using</span> LJCWinFormControls;
+<span class='keyWord'>using</span> System.Data;
 
 <span class='comment'>// Populate a grid with data.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> LoadManager(<span class="userType">LJCDataGrid</span> ljcGrid, <span class='commonType'>string</span> connectionString
