HowTo Add GenText Editor

--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -96,6 +96,11 @@
       <p>
         How to <a href="ProvinceManager/UpdateProvince.html">Update</a> a Province record.
       </p>
+
+      <h4 id="ProvinceManager">Utilities</h4>
+      <p>
+        <a href="GenTextEditor/GenTextEditor.html">GenText Editor</a>
+      </p>
     </div>
     <div class="PathText">
       / <a href="../index.html">Home</a>
