--- a/HTML/GenTextEditor/Output/OutputTab.html
+++ b/HTML/GenTextEditor/Output/OutputTab.html
@@ -27,7 +27,21 @@
       </p>
       <div class="Heading2">Output Tab Controls</div>
       <h4>Output TextBox</h4>
+      <p>
+        The Output TextBox contains the name of the file retrieved with the
+        Output Button. It is the name of the file where the current output
+        code will be saved if the "Save" menu item is selected from the
+        Output Text menu.
+      </p>
+      <p>
+        The target saved file name can be changed by editing the name in the
+        Output TextBox.
+      </p>
       <h4>Output Button</h4>
+      <p>
+        The Output Button displays a File Open dialog to open the desired
+        Output file.
+      </p>
       <p>
         <a href="OutputText.html">Output Text</a>
       </p>
