--- a/HTML/GenTextEditor/Data/DataTab.html
+++ b/HTML/GenTextEditor/Data/DataTab.html
@@ -27,7 +27,8 @@
       <p>
         The Data TextBox contains the name of the XML file retrieved with the
         Data Button. It is the name of the file where the current data XML will
-        be saved if the "Save" menu item is selected from the Section List menu.
+        be saved if the "Save" menu item is selected from the Section, Item or
+        Replacement List menus.
       </p>
       <p>
         The target saved XML file name can be changed by editing the name in the
