--- a/HTML/GenTextEditor/Data/Item/ItemDetail.html
+++ b/HTML/GenTextEditor/Data/Item/ItemDetail.html
@@ -14,9 +14,10 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
-      / <a href="../DataTab.html">DataTab</a>
+      / <a href="ItemList.html">ItemList</a>
       / ItemDetail
     </div>
+    <br />
     <div id='Header'>
       <div id='Title'>The Item Detail Dialog</div>
     </div>
@@ -58,9 +59,10 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
-      / <a href="../DataTab.html">DataTab</a>
+      / <a href="ItemList.html">ItemList</a>
       / ItemDetail
     </div>
+    <br />
     <div class="SmallText">
       Copyright &copy Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
