--- a/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
+++ b/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
@@ -14,9 +14,10 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
-      / <a href="../DataTab.html">DataTab</a>
+      / <a href="ReplacementList.html">ReplacementList</a>
       / ReplacementDetail
     </div>
+    <br />
     <div id='Header'>
       <div id='Title'>The Replacement Detail Dialog</div>
     </div>
@@ -63,9 +64,10 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
-      / <a href="../DataTab.html">DataTab</a>
+      / <a href="ReplacementList.html">ReplacementList</a>
       / ReplacementDetail
     </div>
+    <br />
     <div class="SmallText">
       Copyright &copy Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
