--- a/HTML/GenTextEditor/Data/Section/SectionDetail.html
+++ b/HTML/GenTextEditor/Data/Section/SectionDetail.html
@@ -14,7 +14,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
-      / <a href="../DataTab.html">DataTab</a>
+      / <a href="SectionList.html">SectionList</a>
       / SectionDetail
     </div>
     <br />
@@ -55,7 +55,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
-      / <a href="../DataTab.html">DataTab</a>
+      / <a href="SectionList.html">SectionList</a>
       / SectionDetail
     </div>
     <br />
