--- a/HTML/GenTextEditor/Data/Section/SectionList.html
+++ b/HTML/GenTextEditor/Data/Section/SectionList.html
@@ -65,7 +65,8 @@
       </p>
       <h4>Create Data</h4>
       <p>
-        The 'Create Data' menu item displays the Create Data Detail dialog. This is
+        The 'Create Data' menu item displays the
+        <a href="CreateDataDetail.html">Create Data Detail</a> dialog. This is
         used to create sample data based on a selected Data Source and Table.
       </p>
       <h4>Generate Output</h4>
