--- a/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
+++ b/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
@@ -14,6 +14,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
+      / <a href="../DataTab.html">DataTab</a>
       / <a href="ReplacementList.html">ReplacementList</a>
       / ReplacementDetail
     </div>
@@ -64,6 +65,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
+      / <a href="../DataTab.html">DataTab</a>
       / <a href="ReplacementList.html">ReplacementList</a>
       / ReplacementDetail
     </div>
