--- a/HTML/GenTextEditor/Data/Item/ItemDetail.html
+++ b/HTML/GenTextEditor/Data/Item/ItemDetail.html
@@ -14,6 +14,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
+      / <a href="../DataTab.html">DataTab</a>
       / <a href="ItemList.html">ItemList</a>
       / ItemDetail
     </div>
@@ -59,6 +60,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
+      / <a href="../DataTab.html">DataTab</a>
       / <a href="ItemList.html">ItemList</a>
       / ItemDetail
     </div>
