--- a/HTML/GenTextEditor/Data/Section/CreateDataDetail.html
+++ b/HTML/GenTextEditor/Data/Section/CreateDataDetail.html
@@ -14,6 +14,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
+      / <a href="../DataTab.html">DataTab</a>
       / <a href="SectionList.html">SectionList</a>
       / CreateDataDetail
     </div>
@@ -60,6 +61,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
+      / <a href="../DataTab.html">DataTab</a>
       / <a href="SectionList.html">SectionList</a>
       / CreateDataDetail
     </div>
