--- a/HTML/GenTextEditor/Data/Section/SectionDetail.html
+++ b/HTML/GenTextEditor/Data/Section/SectionDetail.html
@@ -14,6 +14,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
+      / <a href="../DataTab.html">DataTab</a>
       / <a href="SectionList.html">SectionList</a>
       / SectionDetail
     </div>
@@ -55,6 +56,7 @@
     <div class="PathText">
       / <a href="../../../Tutorials.html">Home</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
+      / <a href="../DataTab.html">DataTab</a>
       / <a href="SectionList.html">SectionList</a>
       / SectionDetail
     </div>
