--- a/HTML/GenTextEditor/Data/DataTab.html
+++ b/HTML/GenTextEditor/Data/DataTab.html
@@ -21,7 +21,9 @@
       <div id='Title'>The Data Tab</div>
     </div>
     <div class='Text'>
-      <br />
+      <p>
+        <img src="DataTab.jpg" alt="DataTab" width="450" />
+      </p>
       <div class="Heading2">Data Tab Controls</div>
       <h4>Data TextBox</h4>
       <p>
