--- a/HTML/GenTextEditor/Output/OutputTab.html
+++ b/HTML/GenTextEditor/Output/OutputTab.html
@@ -22,6 +22,9 @@
     </div>
     <div class='Text'>
       <p>
+        <img src="OutputTab.jpg" alt="OutputTab" width="450" />
+      </p>
+      <p>
         The GenText Editor contains the Output Tab with the Output TextBox,
         Output Button and Output Text.
       </p>
