--- a/HTML/GenTextEditor/Data/Section/SectionList.html
+++ b/HTML/GenTextEditor/Data/Section/SectionList.html
@@ -23,6 +23,9 @@
     </div>
     <div class='Text'>
       <p>
+        <img src="SectionList.jpg" alt="Section List" width="450" />
+      </p>
+      <p>
         The GenText Editor contains the Data Tab with the contained Section List in
         the top panel of the tab.
       </p>
