--- a/HTML/GenTextEditor/Data/Item/ItemList.html
+++ b/HTML/GenTextEditor/Data/Item/ItemList.html
@@ -23,6 +23,9 @@
     </div>
     <div class='Text'>
       <p>
+        <img src="ItemList.jpg" alt="Item List" width="450" />
+      </p>
+      <p>
         The GenText Editor contains the Data Tab with the contained Item List in
         the middle panel of the tab.
       </p>
