--- a/HTML/GenTextEditor/Data/Replacement/ReplacementList.html
+++ b/HTML/GenTextEditor/Data/Replacement/ReplacementList.html
@@ -23,6 +23,9 @@
     </div>
     <div class='Text'>
       <p>
+        <img src="ReplacementList.jpg" alt="Replacement List" width="450" />
+      </p>
+      <p>
         The GenText Editor contains the Data Tab with the contained Replacement List
         in the bottom panel of the tab.
       </p>
