--- a/HTML/GenTextEditor/Data/Item/ItemDetail.html
+++ b/HTML/GenTextEditor/Data/Item/ItemDetail.html
@@ -22,6 +22,9 @@
     <div id='Header'>
       <div id='Title'>The Item Detail Dialog</div>
     </div>
+    <p>
+      <img src="ItemDetail.jpg" alt="Item Detail" width="300" />
+    </p>
     <div class='Text'>
       <p>
         The Item Detail dialog allows the user to create and edit
