--- a/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
+++ b/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
@@ -22,6 +22,9 @@
     <div id='Header'>
       <div id='Title'>The Replacement Detail Dialog</div>
     </div>
+    <p>
+      <img src="ReplacementDetail.jpg" alt="Replacement Detail" width="300" />
+    </p>
     <div class='Text'>
       <p>
         The Replacement Detail dialog allows the user to create and edit
