--- a/HTML/GenTextEditor/Data/Section/SectionDetail.html
+++ b/HTML/GenTextEditor/Data/Section/SectionDetail.html
@@ -24,6 +24,9 @@
     </div>
     <div class='Text'>
       <p>
+        <img src="SectionDetail.jpg" alt="Section Detail" width="300" />
+      </p>
+      <p>
         The Section Detail dialog allows the user to create and edit
         Section entries.
       </p>
