--- a/HTML/GenTextEditor/Output/OutputText.html
+++ b/HTML/GenTextEditor/Output/OutputText.html
@@ -37,6 +37,46 @@
         is displayed. This shows that the touch is considered a right mouse
         click. Remove your finger and the context menu will be displayed.
       </p>
+      <h4>XML Decode</h4>
+      <p>
+        Decodes XML entities to XML special characters. This allows HTML
+        display code to be converted back to normal XML.
+      </p>
+      <h4>XML Encode</h4>
+      <p>
+        Encodes XML special characters to XML entites. This allows HTML to
+        display XML information.
+      </p>
+      <h4>HTML XML Syntax Decode</h4>
+      <p>
+        This is a "Tool" menu item to Decode special replacement values
+        to HTML Syntax colors. It helps the user to work with and visualize
+        the XML easier than dealing with the &lt;span&gt; elements.
+      </p>
+      <p>
+        After the XML is marked up with these replacement values it can be
+        Decoded to the corresponding &lt;span&gt; elements for display in an
+        HTML document.
+      </p>
+      <pre>
+_ab_ "Attribute Begin" = "&lt;span class='attrib'&gt;"
+_nb_ "Name Begin"      = "&lt;span class='name'&gt;&lt;span class='ltgt'&gt;&lt;&lt;/span&gt;"
+_ne_ "Name End"        = "&lt;/span&gt;&lt;span class='ltgt'&gt;&gt;&lt;/span&gt;"
+_se_ "Span End"        = "&lt;span&gt;"</pre>
+      <p>
+        The "attrib", "Name" and "ltgt" selector classes are defined in CodeDoc.css.
+      </p>
+      <h4>HTML XML Syntax Encode</h4>
+      <p>
+        This "Tool" menu item converts the &lt;span&gt; elements back into
+        replacement values. It is the reverse of the "HTML XML Syntax Decode"
+        menu item.
+      </p>
+      <h4>HTML C# Syntax Colors</h4>
+      <p>
+        This "Tool" menu item modifies the C# code with &lt;span&gt; elements to
+        give it HTML Syntax coloring. There is no "Decode" function.
+      </p>
       <h4>Generate Output</h4>
       <p>
         The 'Generate Output' menu item generates the Output Text based on the
