--- a/HTML/GenTextEditor/Data/Section/CreateDataDetail.html
+++ b/HTML/GenTextEditor/Data/Section/CreateDataDetail.html
@@ -24,8 +24,11 @@
     </div>
     <div class='Text'>
       <p>
-        The Create Data Detail dialog allows the user to create sample data based
-        on the selected Data Source and Table.
+        <img src="CreateDataDetail.jpg" alt="Create Data Detail" width="300" />
+      </p>
+      <p>
+        The Create Data Detail dialog creates sample data based on the selected
+        Data Source and Table.
       </p>
 
       <h4>Form Controls</h4>
