--- a/HTML/GenTextEditor/Data/Replacement/ReplacementList.html
+++ b/HTML/GenTextEditor/Data/Replacement/ReplacementList.html
@@ -12,7 +12,8 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../../../Tutorials.html">Home</a>
+      / <a href="../../../../index.html">Home</a>
+      / <a href="../../../Tutorials.html">HowTo</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
       / <a href="../DataTab.html">DataTab</a>
       / ReplacementList
@@ -88,7 +89,8 @@
       </p>
     </div>
     <div class="PathText">
-      / <a href="../../../Tutorials.html">Home</a>
+      / <a href="../../../../index.html">Home</a>
+      / <a href="../../../Tutorials.html">HowTo</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
       / <a href="../DataTab.html">DataTab</a>
       / ReplacementList
