--- a/HTML/GenTextEditor/Data/Section/CreateDataDetail.html
+++ b/HTML/GenTextEditor/Data/Section/CreateDataDetail.html
@@ -12,7 +12,8 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../../../Tutorials.html">Home</a>
+      / <a href="../../../../index.html">Home</a>
+      / <a href="../../../Tutorials.html">HowTo</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
       / <a href="../DataTab.html">DataTab</a>
       / <a href="SectionList.html">SectionList</a>
@@ -62,7 +63,8 @@
       </p>
     </div>
     <div class="PathText">
-      / <a href="../../../Tutorials.html">Home</a>
+      / <a href="../../../../index.html">Home</a>
+      / <a href="../../../Tutorials.html">HowTo</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
       / <a href="../DataTab.html">DataTab</a>
       / <a href="SectionList.html">SectionList</a>
