--- a/HTML/GenTextEditor/Output/OutputText.html
+++ b/HTML/GenTextEditor/Output/OutputText.html
@@ -12,7 +12,8 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../../Tutorials.html">Home</a>
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenTextEditor.html">GenTextEditor</a>
       / <a href="OutputTab.html">OutputTab</a>
       / OutputText
@@ -99,7 +100,8 @@ _se_ "Span End"        = "&lt;span&gt;"</pre>
       </p>
     </div>
     <div class="PathText">
-      / <a href="../../Tutorials.html">Home</a>
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenTextEditor.html">GenTextEditor</a>
       / <a href="OutputTab.html">OutputTab</a>
       / OutputText
