--- a/HTML/GenTextEditor/Data/DataTab.html
+++ b/HTML/GenTextEditor/Data/DataTab.html
@@ -12,7 +12,8 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../../Tutorials.html">Home</a>
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenTextEditor.html">GenTextEditor</a>
       / DataTab
     </div>
@@ -53,7 +54,8 @@
       </p>
     </div>
     <div class="PathText">
-      / <a href="../../Tutorials.html">Home</a>
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenTextEditor.html">GenTextEditor</a>
       / DataTab
     </div>
