--- a/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
+++ b/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
@@ -12,7 +12,8 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../../../Tutorials.html">Home</a>
+      / <a href="../../../../index.html">Home</a>
+      / <a href="../../../Tutorials.html">HowTo</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
       / <a href="../DataTab.html">DataTab</a>
       / <a href="ReplacementList.html">ReplacementList</a>
@@ -66,7 +67,8 @@
       </p>
     </div>
     <div class="PathText">
-      / <a href="../../../Tutorials.html">Home</a>
+      / <a href="../../../../index.html">Home</a>
+      / <a href="../../../Tutorials.html">HowTo</a>
       / <a href="../../GenTextEditor.html">GenTextEditor</a>
       / <a href="../DataTab.html">DataTab</a>
       / <a href="ReplacementList.html">ReplacementList</a>
