--- a/HTML/GenTextEditor/GenTextEditor.html
+++ b/HTML/GenTextEditor/GenTextEditor.html
@@ -12,7 +12,8 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../Tutorials.html">Home</a>
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
       / GenTextEditor
     </div>
     <br />
@@ -46,7 +47,8 @@
       </p>
     </div>
     <div class="PathText">
-      / <a href="../Tutorials.html">Home</a>
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
       / GenTextEditor
     </div>
     <br />
