--- a/HTML/GenTextEditor/GenTextEditor.html
+++ b/HTML/GenTextEditor/GenTextEditor.html
@@ -22,9 +22,13 @@
     </div>
     <div class='Text'>
       <p>
-        The GenText Editor provides for editing Code Templates and Replacement
-        Data. It also provides for generating starter Data items and generating
-        Output Code.
+        The GenText Editor (GenTextEdit) provides for editing Text Templates
+        and Replacement Data. It also provides for generating starter Data
+        items and generating Output Text.
+      </p>
+      <p>
+        GenTextEdit uses the GenText program to combine the template and XML
+        Data together to create the generated output text.
       </p>
 
       <h4>The Feature Tabs</h4>
