--- a/HTML/GenTextEditor/Data/DataTab.html
+++ b/HTML/GenTextEditor/Data/DataTab.html
@@ -42,6 +42,10 @@
         The Data Button displays a File Open dialog to open the desired
         Data XML file.
       </p>
+      <p>
+        <a href="DataXML.html">Data XML Example</a>
+      </p>
+
       <h4>Data Item Lists</h4>
       <p>
         <a href="Section/SectionList.html">Section List</a>
