--- a/HTML/DataAccess/ConfigDataAccessWithConfigs.html
+++ b/HTML/DataAccess/ConfigDataAccessWithConfigs.html
@@ -39,16 +39,16 @@
         This is an example of a DataConfigs.xml file.
       </p>
       <pre class="code">
-<span class="ltgt"><</span>?<span class="name"><span class="ltgt"><</span>xml</span><span class="attrib"> version</span>="1.0" ?<span class="ltgt">></span>
-<span class="name"><span class="ltgt"><</span>DataConfigs</span><span class="ltgt">></span><span class="attrib"> xmlns:xsi</span>="http://www.w3.org/2001/XMLSchema-instance"
-             <span class="attrib"> xmlns:xsd</span>="http://www.w3.org/2001/XMLSchema"<span class="ltgt">></span>
+<span class="ltgt"><</span>?<span class="name"><span class="ltgt"><</span>xml</span><span class="attrib"> version</span><span class="ltgt">="1.0" ?</span><span class="ltgt">></span>
+<span class="name"><span class="ltgt"><</span>DataConfigs</span><span class="ltgt">></span><span class="attrib"> xmlns:xsi</span><span class="ltgt">="http://www.w3.org/2001/XMLSchema-instance"</span>
+             <span class="attrib"> xmlns:xsd</span><span class="ltgt">="http://www.w3.org/2001/XMLSchema"</span><span class="ltgt">></span>
   <span class="name"><span class="ltgt"><</span>DataConfig</span><span class="ltgt">></span>;
-    <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>ConfigName<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
-    <span class="name"><span class="ltgt"><</span>ConnectionTypeName</span><span class="ltgt">></span>SQLServer<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
-    <span class="name"><span class="ltgt"><</span>DbServer</span><span class="ltgt">></span>DataServerName<span class="name"><span class="ltgt"><</span>/DbServer</span><span class="ltgt">></span>                   
-    <span class="name"><span class="ltgt"><</span>Database</span><span class="ltgt">></span>DatabaseName<span class="name"><span class="ltgt"><</span>/Database</span><span class="ltgt">></span>
-  <span class="name"><span class="ltgt"><</span>/DataConfig</span><span class="ltgt">></span>
-<span class="name"><span class="ltgt"><</span>/DataConfigs</span><span class="ltgt">></span></pre>
+    <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>ConfigName<span class="name"><span class="ltgt">&lt;/</span>Name</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>ConnectionTypeName</span><span class="ltgt">></span>SQLServer<span class="name"><span class="ltgt">&lt;/</span>Name</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>DbServer</span><span class="ltgt">></span>DataServerName<span class="name"><span class="ltgt">&lt;/</span>DbServer</span><span class="ltgt">></span>                   
+    <span class="name"><span class="ltgt"><</span>Database</span><span class="ltgt">></span>DatabaseName<span class="name"><span class="ltgt">&lt;/</span>Database</span><span class="ltgt">></span>
+  <span class="name"><span class="ltgt">&lt;/</span>DataConfig</span><span class="ltgt">></span>
+<span class="name"><span class="ltgt">&lt;/</span>DataConfigs</span><span class="ltgt">></span></pre>
       <p>
         The available ConnectionTypeNames are: "SQLServer", "OLEDB", "ODBC",
         "MySQL" and "Access".
@@ -67,18 +67,18 @@
         This is an example of a ConnectionTemplates.xml file.
       </p>
       <pre class="code">
-<span class="ltgt"><</span>?<span class="name"><span class="ltgt"><</span>xml</span><span class="attrib"> version</span>="1.0" ?<span class="ltgt">></span>
-<span class="name"><span class="ltgt"><</span>ConnectionTemplates</span><span class="ltgt">></span><span class="attrib"> xmlns:xsi</span>="http://www.w3.org/2001/XMLSchema-instance"
-   <span class="attrib"> xmlns:xsd</span>="http://www.w3.org/2001/XMLSchema"<span class="ltgt">></span>
+<span class="ltgt"><</span>?<span class="name"><span class="ltgt"><</span>xml</span><span class="attrib"> version</span><span class="ltgt">="1.0" ?</span><span class="ltgt">></span>
+<span class="name"><span class="ltgt"><</span>ConnectionTemplates</span><span class="ltgt">></span><span class="attrib"> xmlns:xsi</span><span class="ltgt">="http://www.w3.org/2001/XMLSchema-instance"</span>
+                     <span class="attrib"> xmlns:xsd</span><span class="ltgt">="http://www.w3.org/2001/XMLSchema"</span><span class="ltgt">></span>
   <span class="name"><span class="ltgt"><</span>ConnectionTemplate</span><span class="ltgt">></span>
-    <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>SQLServer<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
-    <span class="name"><span class="ltgt"><</span>Template</span><span class="ltgt">></span>Data Source={DbServer}; Initial Catalog={Database}; Integrated Security=True; User Id={UID} Password={PSWD};<span class="name"><span class="ltgt"><</span>/Template</span><span class="ltgt">></span>
-  <span class="name"><span class="ltgt"><</span>/ConnectionTemplate</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>SQLServer<span class="name"><span class="ltgt">&lt;/</span>Name</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>Template</span><span class="ltgt">></span>Data Source={DbServer}; Initial Catalog={Database}; Integrated Security=True; User Id={UID} Password={PSWD};<span class="name"><span class="ltgt">&lt;/</span>Template</span><span class="ltgt">></span>
+  <span class="name"><span class="ltgt">&lt;/</span>ConnectionTemplate</span><span class="ltgt">></span>
   <span class="name"><span class="ltgt"><</span>ConnectionTemplate</span><span class="ltgt">></span>
-    <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>MySQL<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
-    <span class="name"><span class="ltgt"><</span>Template</span><span class="ltgt">></span>server={DbServer}; UserId={UID}; Password={PSWD}; database={Database};<span class="name"><span class="ltgt"><</span>/Template</span><span class="ltgt">></span>
-  <span class="name"><span class="ltgt"><</span>/ConnectionTemplate</span><span class="ltgt">></span>
-<span class="name"><span class="ltgt"><</span>/ConnectionTemplates</span><span class="ltgt">></span></pre>
+    <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>MySQL<span class="name"><span class="ltgt">&lt;/</span>Name</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>Template</span><span class="ltgt">></span>server={DbServer}; UserId={UID}; Password={PSWD}; database={Database};<span class="name"><span class="ltgt">&lt;/</span>Template</span><span class="ltgt">></span>
+  <span class="name"><span class="ltgt">&lt;/</span>ConnectionTemplate</span><span class="ltgt">></span>
+<span class="name"><span class="ltgt">&lt;/</span>ConnectionTemplates</span><span class="ltgt">></span></pre>
       <p>
         The "Name" value
         matches the "ConnectionTypeName" from the DataConfig definition.
