--- a/HTML/DataAccess/GetRowDataObject.html
+++ b/HTML/DataAccess/GetRowDataObject.html
@@ -32,7 +32,7 @@
       </p>
       <p>
         The Data Object associated with a grid row can be retrieved if the
-        columns contain a unique key.
+        grid columns contain a unique key.
       </p>
       <pre class="code">
 <span class='keyWord'>using</span> LJCDataAccess;
