--- a/HTML/ProvinceManager/AddProvince.html
+++ b/HTML/ProvinceManager/AddProvince.html
@@ -44,8 +44,8 @@
     Description = <span class='text'>"A Sample Province"</span>,
     Abbreviation = <span class='text'>"PN"</span>
   };
-  <span class='commonType'>var</span> resultProvince = manager.Add(province);
-  <span class='commonType'>var</span> addedID = resultProvince.ID;
+  <span class='commonType'>var</span> dbAssignedValues = manager.Add(province);
+  <span class='commonType'>var</span> addedID = dbAssignedValues.ID;
 }</pre>
     </div>
     <div class="PathText">
