--- a/HTML/SQLManager/UpdateWithFilters.html
+++ b/HTML/SQLManager/UpdateWithFilters.html
@@ -37,7 +37,7 @@
 <span class='keyWord'>using</span> System.Collections.Generic;
 
 <span class='comment'>// Updating data with Filters using the SQLManager object.</span>
-<span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithFilters(Province province, <span class="commonType">string</span> connectionString, <span class="commonType">string</span> providerName)
+<span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithFilters(<span class="userType">Province</span> province, <span class="commonType">string</span> connectionString, <span class="commonType">string</span> providerName)
 {
   <span class='comment'>// Create the SQLManager.</span>
   <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, <span class='text'>"Province"</span>, connectionString
