--- a/HTML/SQLManager/UpdateWithKeys.html
+++ b/HTML/SQLManager/UpdateWithKeys.html
@@ -44,7 +44,7 @@ and column2 = "Something"</pre>
 <span class='keyWord'>using</span> System.Collections.Generic;
 
 <span class='comment'>// Updating data with Keys using the SQLManager object.</span>
-<span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithKeys(Province province, <span class="commonType">string</span> connectionString, <span class="commonType">string</span> providerName)
+<span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithKeys(<span class="userType">Province</span> province, <span class="commonType">string</span> connectionString, <span class="commonType">string</span> providerName)
 {
   <span class='comment'>// Create the SQLManager.</span>
   <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, <span class='text'>"Province"</span>, connectionString
