--- a/HTML/General/HowToUseLJCProjects.html
+++ b/HTML/General/HowToUseLJCProjects.html
@@ -62,8 +62,10 @@
       </p>
       <p>
         Copy at a minimum the following files from the virtual ZIP root folder
-        to your root folder: BuildAll.cmd, ClearBuild.cmd, ClearBuildDetail.cmd,
-        LICENSE, README.md, SetupFolder.cmd, SetupUpdate.cmd and UpdateAll.cmd.
+        to your root folder: 1BuildAll.cmd, 2BuildAssemblies.cmd,
+        3BuildUtilities.cmd, 4BuildTestApps.cmd, 5BuildSampleApps.cmd,
+        ClearBuild.cmd, ClearBuildDetail.cmd, LICENSE, README.md,
+        SetupFolder.cmd, SetupUpdate.cmd and UpdateAll.cmd.
       </p>
       <p>
         It is recommended to start by copying the following project folders and
