--- a/HTML/GenTextEditor/Data/DataTab.html
+++ b/HTML/GenTextEditor/Data/DataTab.html
@@ -34,6 +34,10 @@
         Replacement List menus.
       </p>
       <p>
+        The default data XML file path is:<br />
+        C:\Users\UserName\Documents\Visual Studio 2022\LJCProjectsDev\CoreUtilities\LJCGenText\LJCGenTableCode\bin\Debug\XMLFiles
+      </p>
+      <p>
         The target saved XML file name can be changed by editing the name in the
         Data TextBox.
       </p>
