--- a/HTML/GenTextEditor/Output/OutputTab.html
+++ b/HTML/GenTextEditor/Output/OutputTab.html
@@ -38,6 +38,10 @@
         Output Text menu.
       </p>
       <p>
+        The default output file path is:<br />
+        C:\Users\UserName\Documents\Visual Studio 2022\LJCProjectsDev\CoreUtilities\LJCGenText\LJCGenTableCode\bin\Debug\DataFiles
+      </p>
+      <p>
         The target saved file name can be changed by editing the name in the
         Output TextBox.
       </p>
