--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -47,6 +47,9 @@
         <a href="DataAccess/DataAccessRetrieve.html">TableData</a>.
       </p>
       <p>
+        The Example <a href="SQLManager/DataObject.html">Data Object</a>.
+      </p>
+      <p>
         How to get a <a href="DataAccess/GetRowDataObject.html">Data Object</a>
         from an LJCGridRow.
       </p>
