--- a/HTML/DataAccess/GetRowDataObject.html
+++ b/HTML/DataAccess/GetRowDataObject.html
@@ -51,8 +51,10 @@
     <span class='commonType'>var</span> dataTable = dataAccess.GetDataTable(sql);
     <span class='keyWord'>if</span> (<span class="userType">NetCommon</span>.HasData(dataTable))
     {
-      <span class='comment'>// Create the Data Object. Set values where DataTable column name</span>
-      <span class="comment">// matches object property name and DataTable column row value is not null.</span>
+      <span class='comment'>// Create the Data Object.</span>
+      <span class="comment">// Sets object values where DataTable column names match</span>
+      <span class="comment">// the object property names and DataTable column row</span>
+      <span class="comment">// values are not null.</span>
       <span class='commonType'>var</span> converter = <span class='keyWord'>new</span> <span class="userType">ResultConverter</span>&lt;<span class="userType">Province</span>, <span class="userType">Provinces</span>&gt;();
       <span class='commonType'>var</span> province = converter.CreateDataFromTable(dataTable);
     }
