--- a/HTML/DataAccess/GetRowDataObject.html
+++ b/HTML/DataAccess/GetRowDataObject.html
@@ -43,20 +43,31 @@
 <span class='modifier'>internal</span> <span class='commonType'>void</span> GetRowDataObject(<span class="userType">DataAccess</span> dataAccess
   , <span class="userType">LJCGridRow</span> ljcGridRow)
 {
-  <span class='keyWord'>if</span> (ljcGridRow != null)
+      <span class='keyWord'>if</span> (ljcGridRow != null)
   {
-    <span class='commonType'>var</span> name = ljcGridRow.LJCGetCellText(<span class='text'>"Name"</span>);
+      <span class='commonType'>var</span> name = ljcGridRow.LJCGetCellText(<span class='text'>"Name"</span>);
 
-    <span class='commonType'>var</span> sql = <span class="text">$"select * from Province where Name=\'{name}\'"</span>;
-    <span class='commonType'>var</span> dataTable = dataAccess.GetDataTable(sql);
-    <span class='keyWord'>if</span> (<span class="userType">NetCommon</span>.HasData(dataTable))
+      <span class='commonType'>var</span> sql = <span class="text">$"select * from Province where Name=\'{name}\'"</span>;
+      <span class='commonType'>var</span> dataTable = dataAccess.GetDataTable(sql);
+      <span class='keyWord'>if</span> (<span class="userType">NetCommon</span>.HasData(dataTable))
     {
+      // Use definition for different values.
+      DbColumns dataDefinition = new DbColumns()
+      {
+        <span class='comment'>// Property name is different from DB column name.</span>
+        { <span class='text'>"ColumnName"</span>, <span class='text'>"PropertyName"</span> },
+        <span class='comment'>// DataTable Column and Property name different from DB column name.</span>
+        { <span class='text'>"ColumnName"</span>, <span class='text'>"PropertyName"</span>, <span class='text'>"RenameAs"</span> }
+      };
+
       <span class='comment'>// Create the Data Object.</span>
       <span class="comment">// Sets object values where DataTable column names match</span>
       <span class="comment">// the object property names and DataTable column row</span>
       <span class="comment">// values are not null.</span>
+      <span class="comment">// If DataRow is not provided, first row is used if available.</span>
       <span class='commonType'>var</span> converter = <span class='keyWord'>new</span> <span class="userType">ResultConverter</span>&lt;<span class="userType">Province</span>, <span class="userType">Provinces</span>&gt;();
       <span class='commonType'>var</span> province = converter.CreateDataFromTable(dataTable);
+        , dataDefinition: dataDefinition);
     }
   }
 }</pre>
