--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -72,6 +72,10 @@
         <a href="SQLManager/RetrieveWithRowValues.html">Row Saved Values</a>.
       </p>
       <p>
+        How to Retrieve a data record
+        <a href="SQLManager/RetrieveWithJoins.html">With Joins</a>.
+      </p>
+      <p>
         How to update data using
         <a href="SQLManager/UpdateWithKeys.html">Keys</a>.
       </p>
