--- a/HTML/SQLManager/RetrieveWithJoins.html
+++ b/HTML/SQLManager/RetrieveWithJoins.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- Copyright(c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- Retrieve.html -->
+<!-- RetrieveWithJoins.html -->
 <html lang="en">
 <head>
-  <title>Retrieve with SQLManager</title>
+  <title>Retrieve Joins with SQLManager</title>
   <meta charset='utf-8' />
   <meta name="description" content="How to Use LJCProjects">
   <meta name="keywords" content="LJC, C#, Code, Tutorial">
@@ -19,11 +19,11 @@
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#SQLManager">HowTo</a>
-      / Retrieve
+      / RetrieveWithJoins
     </div>
     <br />
     <div id='Header'>
-      <div id='Title'>How to Retrieve Data using SQLManager</div>
+      <div id='Title'>How to Retrieve Data with Joins using SQLManager</div>
     </div>
     <div class='Text'>
       <p>
@@ -58,7 +58,7 @@ See the Technical Documentation for more information.</pre>
 <span class='keyWord'>using</span> System.Data;
 
 <span class='comment'>// Selecting data with the SQLManager object.</span>
-<span class='modifier'>internal</span> Province Retrieve(<span class="keyWord">string</span> connectionString, <span class="keyWord">string</span> providerName)
+<span class='modifier'>internal</span> Province RetrieveWithJoins(<span class="keyWord">string</span> connectionString, <span class="keyWord">string</span> providerName)
 {
   <span class="userType">Province</span> retValue;
 
@@ -78,23 +78,62 @@ See the Technical Documentation for more information.</pre>
     { <span class='text'>"Abbreviation"</span> }
   };
 
-  <span class='comment'>// Perform the Select</span>
-  <span class='commonType'>var</span> dataTable = sqlManager.GetDataTable(keyColumns, propertyNames);
+  <span class='comment'>// Create the Join definition.</span>
+  <span class="userType">DbJoins</span> dbJoins = <span class='keyWord'>new</span> <span class="userType">DbJoins</span>();
+  <span class="userType">DbJoin</span> dbJoin = <span class='keyWord'>new</span> <span class="userType">DbJoin()</span>
+  {
+    TableName = "Region",
+    Columns = <span class='keyWord'>new</span> <span class="userType">DbColumns()</span>
+    {
+      <span class='comment'>// PropertyName is "RegionName" as data object cannot have duplicate</span>
+      <span class='comment'>// properties.</span>
+      <span class='comment'>// RenameAs is "JoinName" as DataTable cannot have duplicate columns.</span>
+      { <span class='text'>"Name"</span>, <span class='text'>"RegionName"</span>, <span class='text'>"JoinName"</span> }
+    },
+    JoinOns = new <span class="userType">DbJoinOns</span>()
+    {
+      { <span class='text'>"RegionID"</span>, <span class='text'>"ID"</span> }
+    }
+  };
+  dbJoins.Add(dbJoin);
 
-  <span class="comment">// Assumes DataTable column names same as object property names.</span>
+  <span class='comment'>// Perform the Select</span>
+  <span class='commonType'>var</span> dataTable = sqlManager.GetDataTable(keyColumns, propertyNames
+    , dbJoins: dbJoins);
+  <span class='comment'>//Created SQL statement - sqlManager.SQLStatement is:</span>
+  <span class='comment'>// select</span>
+  <span class='comment'>//   Province.Name,</span>
+  <span class='comment'>//   Province.Description,</span>
+  <span class='comment'>//   Province.Abbreviation,</span>
+  <span class='comment'>//   Region.Name as JoinName</span>
+  <span class='comment'>// from Province</span>
+  <span class='comment'>// left join Region</span>
+  <span class='comment'>//   on ((Province.RegionID = Region.ID))</span>
+  <span class='comment'>// where Province.ID = 1;</span>
+
+  <span class='comment'>// Create the Data Object.</span>
+  <span class="comment">// Use definition for different values.</span>
+  <span class="comment">// Must add "RegionName" property to Province to receive the join value.</span>
+  <span class="userType">DbColumns</span> dataDefinition = <span class='keyWord'>new</span> <span class="userType">DbColumns</span>()
+  {
+    <span class="comment">// Property and DataTable Column name different than DB column name.</span>
+    { <span class='text'>"Name"</span>, <span class='text'>"RegionName"</span>, <span class='text'>"JoinName"</span> }
+  };
+
   <span class="comment">// Sets object values where DataTable column names match</span>
   <span class="comment">// the object property names and DataTable column row</span>
   <span class="comment">// values are not null.</span>
   <span class="comment">// If DataRow is not provided, first row is used if available.</span>
   <span class='commonType'>var</span> converter = <span class='keyWord'>new</span> <span class="userType">ResultConverter</span>&lt;<span class="userType">Province</span>, <span class="userType">Provinces</span>&gt;();
   retValue = converter.CreateDataFromTable(dataTable);
+    , dataDefinition: dataDefinition);
   <span class='keyWord'>return</span> retValue;
 }</pre>
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#SQLManager">HowTo</a>
-      / Retrieve
+      / RetrieveWithJoins
     </div>
     <br />
     <div class="SmallText">
