--- a/HTML/GenTextEditor/Output/OutputText.html
+++ b/HTML/GenTextEditor/Output/OutputText.html
@@ -76,7 +76,7 @@ _se_ "Span End"        = "&lt;span&gt;"</pre>
       <h4>HTML C# Syntax Colors</h4>
       <p>
         This "Tool" menu item modifies the C# code with &lt;span&gt; elements to
-        give it HTML Syntax coloring. There is no "Decode" function.
+        give it HTML Syntax coloring. There is no "Encode" function.
       </p>
       <h4>Generate Output</h4>
       <p>
