--- a/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/Data/Section/SectionList.html
+++ b/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/Data/Section/SectionList.html
@@ -81,7 +81,7 @@
   </p>
   <h6>
     SectionList<br />
-    Copyright © Lester J Clark and Contributors.<br />
+    Copyright &copy; Lester J Clark and Contributors.<br />
     Licensed under the MIT License.
   </h6>
 </body>
