--- a/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/Data/Replacement/ReplacementList.html
+++ b/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/Data/Replacement/ReplacementList.html
@@ -72,7 +72,7 @@
   </p>
   <h6>
     ReplacementList<br />
-    Copyright © Lester J Clark and Contributors.<br />
+    Copyright &copy; Lester J Clark and Contributors.<br />
     Licensed under the MIT License.
   </h6>
 </body>
